# RedRVFL

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  pyproject.toml.save  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
RecRVFL_/: RecRVFL.py
datasets/: DJI.csv
docs/: index.rst
examples/: run_dji_paper.py  run_finance_forecasting.py
legacy/: README.md  redrvfl_experiment.py
src/redrvfl/: __init__.py  data.py  finance.py  metrics.py  models.py  tuning.py
tests/: test_models.py  test_tuning.py
