[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redrvfl"
version = "0.1.1"
description = "RVFL, Ensemble Deep RVFL, and Recurrent Ensemble Deep RVFL models for regression and forecasting."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Aryan Bhambu"},
]

keywords = [
    "rvfl",
    "edrvfl",
    "redrvfl",
    "time-series",
    "forecasting",
    "ridge-regression",
    "machine-learning",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
tuning = [
    "hyperopt>=0.2.7",
    "setuptools<81",
]

finance = [
    "yfinance>=0.2",
]

plots = [
    "matplotlib>=3.5",
]

all = [
    "hyperopt>=0.2.7",
    "matplotlib>=3.5",
    "setuptools<81",
    "yfinance>=0.2",
]

dev = [
    "build",
    "hyperopt>=0.2.7",
    "matplotlib>=3.5",
    "pytest",
    "setuptools<81",
    "twine",
    "yfinance>=0.2",
]

[project.urls]
Homepage = "https://github.com/statsdl/RedRVFL"
Issues = "https://github.com/statsdl/RedRVFL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
